[gd_scene load_steps=6 format=2]

[ext_resource path="res://models/bomb.obj" type="ArrayMesh" id=1]
[ext_resource path="res://models/bomb.png" type="Texture" id=2]
[ext_resource path="res://scripts/Bomb.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )

[sub_resource type="SphereShape" id=2]
radius = 0.824981

[node name="Bomb" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.804864, 0 )
shape = SubResource( 2 )

[node name="Timer1" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
